# notch-capsule

./: .gitignore  .prettierignore  CONFIG_README.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  SWIFT_INTEGRATION.md  SWIFT_REWRITE_SUMMARY.md  notch-config.json  package-lock.json  package.json  pnpm-lock.yaml
src/: app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  notch.json
src-tauri/src/: config.rs  lib.rs
src-tauri/src/macos/: mod.rs  native_anim.rs  native_mask.rs  swift_bridge.rs
src-tauri/swift/: Package.swift
src-tauri/swift/Sources/NotchCapsuleKit/: NotchAnimator.swift  NotchManager.swift
src/lib/: config.ts  index.ts  notch-expanded.svelte
src/lib/components/: top-bar.svelte
src/lib/components/music/: waveform.svelte
src/lib/components/views/: app-view.svelte  archive-view.svelte  settings-view.svelte
src/lib/stores/: tabs.ts
src/routes/: +page.svelte
static/: notch-config.json
