[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-positioner = { version = "2.3.0", features = ["tray-icon"] }

[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.3.2", features = ["objc2-core-foundation"] }
objc2-app-kit = { version = "0.3.2", features = ["objc2-core-foundation"] }
window-vibrancy = "0.5"
